@@ -13,6 +13,7 @@ Release 0.19.0 - Unreleased
                (Doğacan Güney via Jim Kellerman)
    HBASE-906   [shell] Truncates output
    HBASE-912   PE is broken when other tables exist
+   HBASE-853    [shell] Cannot describe meta tables (Izaak Rubin via Stack)
 
   IMPROVEMENTS
    HBASE-901   Add a limit to key length, check key and value length on client side
